<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/md_theme_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/md_theme_onPrimaryContainer"
            app:title="@string/app_name"
            app:titleTextColor="@color/md_theme_onPrimary_highContrast"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/md_theme_onPrimary_highContrast"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top"
                android:padding="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="16dp"
                    android:background="@color/md_theme_background"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center_horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/detail_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background"
                            app:shapeAppearanceOverlay="@style/RoundedSquare" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/detail_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Ms. Hanan Hagerup"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/md_theme_onSurface" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/baseline_email_24"
                                android:contentDescription="@string/email"
                                app:tint="@color/md_theme_onPrimary" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detail_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/hanan_hagerup_example_com"
                                android:textAppearance="?attr/textAppearanceBody1" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/baseline_local_phone_24"
                                android:contentDescription="@string/phone"
                                app:tint="@color/md_theme_onPrimary" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detail_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="@string/_25509026"
                                android:textAppearance="?attr/textAppearanceBody1" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/baseline_smartphone_24"
                                android:contentDescription="@string/cell"
                                app:tint="@color/md_theme_onPrimary" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/detail_mobile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="45293218"
                                android:textAppearance="?attr/textAppearanceBody1" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
